# Kubernetes-deployment-patterns

./: README.md
ESAIM-test/cloud-edge/docker/overlay/: Dockerfile
ESAIM-test/cloud-edge/docker/ros2/: Dockerfile
ESAIM-test/microservices/: README.md
ESAIM-test/monolithic/docker/: Dockerfile  monolithic_launch.py
Models/ros2_cam_ws/docker/: Dockerfile  entrypoint.sh
Models/ros2_cam_ws/src/camera_driver_pkg/: camera_driver.launch.py  driver.py  package.xml  setup.cfg  setup.py
Models/ros2_yolo_ws/docker/: Dockerfile  entrypoint.sh
Models/ros2_yolo_ws/src/yolo_detector_pkg/: object_detection.py  package.xml  setup.py  yolo_detector.launch.py
Patterns/monolithic/: README.md
Patterns/monolithic/helm/: Chart.yaml  values.yaml
cloud-edge/: README.md
cloud-edge/helm/cloud-edge/: Chart.yaml  values.yaml
dynamic-loader/helm/dynamic-loader/: Chart.yaml  values.yaml
dynamic-loading/: README.md
helm/ros2-dynamic/: Chart.yaml  values.yaml
helm/ros2-dynamic/templates/: configmap-plugins.yaml  deployment.yaml
helm/ros2-microservices/: Chart.yaml  values.yaml
helm/ros2-microservices/templates/: _deployment.tpl  deployment.yaml
helm/ros2-monolithic/: values.yaml
helm/ros2-monolithic/templates/: deployment.yaml
helm/ros2-overlay/: Chart.yaml  values.yaml
helm/ros2-overlay/templates/: deployment.yaml  service.yaml
microservices/helm/ros2-microservices/: Chart.yaml  values.yaml
monolithic/helm/: Chart.yaml  values.yaml
monolithic/helm/templates/: configmap-monolithic.yaml  deployment.yaml  service.yaml  talker-deployment.yaml
(+54 files in other folders)
