<?xml version="1.0"?>
<package format="3">
  <name>camera_driver_pkg</name>
  <version>0.1.0</version>
  <description>Publica /camera/image_raw leyendo de /dev/video0</description>
  <maintainer email="mmateo@cigip.upv.es">Miguel Angel Mateo-Casali</maintainer>
  <license>Apache-2.0 - CIGIP</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
